Remove more GraphOS essentials screenshots

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -89,7 +89,7 @@ To add a new variant to your supergraph with Rover, you publish its first subgra
 
 ## Managing subgraphs
 
-After you create a [cloud supergraph](./#cloud-supergraphs) (or a new variant of one), you can view a list of its associated subgraphs from the variant's Subgraphs page:
+After you create a [cloud supergraph](./#cloud-supergraphs) (or a new variant of one), you can view a list of its associated subgraphs from the variant's **Subgraphs** page:
 
 <img
   class="screenshot"
