--- a/src/content/graphos/basics/graphs/management.mdx
+++ b/src/content/graphos/basics/graphs/management.mdx
@@ -31,16 +31,8 @@ Only organization members with the [**Org Admin** or **Graph Admin** role](../or
 
 </Note>
 
-1. Go to your variant's Settings page and open the **This Variant** tab.
-2. Find the Public card and click **Change**:
-
-   <img
-     class="screenshot"
-     src="../../img/toggle-public-protected-variant.png"
-     alt="Toggle public variant in Studio"
-     width="400"
-   />
-
+1. Go to your variant's **Settings** page and open the **This Variant** tab.
+2. Under **Danger Zone**, find the **Public** card and click **Change**.
 3. Toggle your selection and click **Save**.
 
 You can toggle the switch back to **Off** to make the variant private again.
