--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -91,14 +91,7 @@ A graph variant's **Schema** page has three distinct views:
 
 ### Schema reference
 
-The **Reference** tab on the **Schema** page lists the different kinds of definitions in your schema, for example, objects, scalars, etc.:
-
-<img
-  className="screenshot"
-  alt="Schema page list of type definitions in Studio"
-  src="../../img/schema-page-list.jpg"
-  width="300"
-/>
+The **Reference** tab on the **Schema** page lists the different kinds of definitions in your schema, for example, objects, scalars, interfaces, and so on.
 
 Select a kind of definition to view a table of all corresponding types:
 
