--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -78,16 +78,9 @@ Although patch release updates are automatic, you must manually move a graph's b
 
 1. Go to your variant's Settings page, then find the **General > Build Configuration** section.
 
-2. Click **Edit Configuration**. The following dialog appears:
+2. Click **Edit Configuration**.
 
-   <img
-     src="../../img/update-build-configuration.jpg"
-     class="screenshot"
-     width="600"
-     alt="Build configuration dialog in Studio"
-   />
-
-3. Select a Federation version from the **Supergraph Pipeline Track** dropdown and click **Save**.
+3. In the dialog that appears, select a Federation version from the **Supergraph Pipeline Track** dropdown and click **Save**.
 
 GraphOS immediately initiates a new build using the selected Federation version, and all future builds also use the selected version.
 
