--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -101,7 +101,7 @@ Only organization members [with edit access](../org/members/#role-permissions) t
 
 </Note>
 
-1. From the Explorer, open an operation from the Operation Collections menu:
+1. From the Explorer, open an operation from the **Operation Collections** menu:
 
    <img
      class="screenshot"
