--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -68,7 +68,7 @@ With an Enterprise trial, you create a new GraphOS organization that behaves ide
 
 - Single sign-on (SSO)
 
-You can identify your trial organization in [GraphOS Studio](https://studio.apollographql.com) by the `ENTERPRISE TRIAL` label next to its name in the upper left:
+You can identify your trial organization in [GraphOS Studio](https://studio.apollographql.com) by the **ENTERPRISE TRIAL** label next to its name in the upper left:
 
 <img
   className="screenshot"
