Remove unnecessary integration screenshots

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -47,7 +47,7 @@ This method of adding a variant is available only to cloud supergraphs. For othe
 
 </Note>
 
-1. Go to your supergraph's Settings page in Studio and navigate to **This Graph > Variants**:
+1. Go to your supergraph's **Settings** page in Studio and navigate to **This Graph > Variants**:
 
    <img
      src="../../img/federated-graphs/variant-settings.jpg"
@@ -55,23 +55,9 @@ This method of adding a variant is available only to cloud supergraphs. For othe
      alt="Variant settings page in Studio"
    />
 
-2. Click **Add a variant**. The following dialog appears:
+2. Click **Add a variant**.
 
-   <img
-     src="../../img/federated-graphs/add-variant-1.jpg"
-     class="screenshot"
-     alt="Step 1 for adding a variant in Studio"
-     width="450"
-   />
-
-3. Provide a **Variant Name** and click **Continue**. The next step in the dialog appears:
-
-   <img
-     src="../../img/federated-graphs/add-variant-2.jpg"
-     class="screenshot"
-     alt="Step 2 for adding a variant in Studio"
-     width="450"
-   />
+3. In the dialog that appears, provide a **Variant Name** and click **Continue**.
 
 4. Provide your first subgraph's **Routing URL** (this is the URL that your new variant's router will use to communicate with the subgraph), along with a **Subgraph Name**.
 
@@ -115,7 +101,7 @@ This method of adding a subgraph is available only to cloud supergraphs. For oth
 
 </Note>
 
-1. Go to your variant's Subgraphs page in Studio:
+1. Go to your variant's **Subgraphs** page in Studio:
 
    <img
      src="../../img/federated-graphs/subgraphs-page.jpg"
@@ -124,16 +110,9 @@ This method of adding a subgraph is available only to cloud supergraphs. For oth
      width="550"
    />
 
-2. Click **Add a subgraph**. The following dialog appears:
+2. Click **Add a subgraph**.
 
-   <img
-     src="../../img/federated-graphs/add-subgraph-dialog.jpg"
-     class="screenshot"
-     alt="Dialog for adding a subgraph in Studio"
-     width="450"
-   />
-
-3. Provide your subgraph's **Routing URL** (this is the URL that your supergraph's router will use to communicate with the subgraph), along with a **Subgraph Name**.
+3. In the dialog that appears, provide your subgraph's **Routing URL** (this is the URL that your supergraph's router will use to communicate with the subgraph), along with a **Subgraph Name**.
 
 4. If Studio can't fetch your subgraph's schema automatically from the routing URL, click **Advanced options** to provide the schema another way (such as by pasting the schema directly or introspecting a locally running server).
 
@@ -149,7 +128,7 @@ To add a subgraph to your supergraph with Rover, you publish the subgraph's sche
 
 From your variant's Subgraphs page, you can modify an existing subgraph's routing URL:
 
-1. Open the "◦◦◦" menu for the subgraph you want to modify:
+1. Open the **•••** menu for the subgraph you want to modify:
 
    <img
      class="screenshot"
@@ -413,7 +392,7 @@ In the **Schema > Reference** tab, tags are shown inline with each type and fiel
   width="600"
 />
 
-Tags are also visible in the Explorer's Documentation tab:
+Tags are also visible in the Explorer's **Documentation** tab:
 
 <img
   class="screenshot"
