--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -91,7 +91,7 @@ A graph variant's **Schema** page has three distinct views:
 
 ### Schema reference
 
-The **Reference** tab on the **Schema** page lists the different kinds of definitions in your schema, for example, objects, scalars, interfaces, and so on.
+The **Reference** tab on the **Schema** page lists the different kinds of definitions in your schema, for example, objects, scalars, interfaces, etc.
 
 Select a kind of definition to view a table of all corresponding types:
 
