--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -286,14 +286,7 @@ If the value of any required header includes a secure credential (such as an acc
 
 On the **Cloud Router** page, click **Save a secret**. The following dialog appears:
 
-<img
-  className="screenshot"
-  alt="Adding a secret to your router"
-  src="../../img/cloud-routing/add-secret.jpg"
-  width="500"
-/>
-
-Enter a name and value for your secret. You can't view a secret's value after you save it, so make sure that the value is correct before saving. When you're ready, click **Save secret**.
+In the dialog that appears, enter a name and value for your secret. You can't view a secret's value after you save it, so make sure that the value is correct before saving. When you're ready, click **Save secret**.
 
 Your secret is encrypted and stored. Now you can use the secret's value in your router's configuration YAML.
 
