--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -76,18 +76,12 @@ You can repeat this process to create webhook URLs for different Slack channels.
 
 #### 2. Provide the Slack hook to Studio
 
-<img
-  src="../../img/integrations/slack_creation.png"
-  width="500"
-  className="screenshot"
-  alt="Slack Creation Modal"
-/>
+1. Back in GraphOS Studio, specify a name for this notification channel in the **Channel Name** field.
 
-1. Back in Studio, specify a name for this notification channel in the Channel Name field. This name must be unique among your graph's notification channels.
+   - This name must be unique among your graph's notification channels.
+   - This name does not have to match the name of the Slack channel, but it's recommended for simplicity.
 
-   This name does not have to match the name of the Slack channel, but it's recommended for simplicity.
-
-2. In the Slack Webhook URL field, paste the webhook URL you obtained in [Create an incoming Slack hook](#1-create-an-incoming-slack-hook).
+2. In the **Slack Webhook URL** field, paste the webhook URL you obtained in [Create an incoming Slack hook](#1-create-an-incoming-slack-hook).
 3. Click **Next**.
 4. After you complete configuration, verify that your Slack channel receives a confirmation notification from Studio.
 
@@ -101,32 +95,26 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 ##### Existing services
 
-1. Navigate to the service's Integrations tab and click **new integration**.
-2. Enter an Integration Name, (for example "Apollo Alerts").
-3. Under "Integration type," choose **Use our API directly** and **Events API v2**.
+1. Navigate to the service's **Integrations** tab and click **new integration**.
+2. Enter an **Integration Name**, for example, `Apollo Alerts`.
+3. Under **Integration type**, choose **Use our API directly** and **Events API v2**.
 4. Click **Add Integration**.
 5. From the Integrations tab, copy the generated integration key from the table for use in the [next step](#2-provide-the-integration-key-to-studio).
 
 ##### Adding a service
 
-1. Under "Integration Settings," choose **Use our API directly** and use **Events API v2**.
-2. Enter an Integration Name (for example, `Apollo Alerts`) and complete the add service flow.
-3. From the Integrations tab, copy the generated integration key from the table for use in the [next step](#2-provide-the-integration-key-to-studio).
+1. Under **Integration Settings**, choose **Use our API directly** and use **Events API v2**.
+2. Enter an **Integration Name**, for example, `Apollo Alerts`, and complete the add service flow.
+3. From the **Integrations** tab, copy the generated integration key from the table for use in the [next step](#2-provide-the-integration-key-to-studio).
 
 #### 2. Provide the integration key to Studio
 
-<img
-  src="../../img/integrations/pd_creation.png"
-  width="500"
-  className="screenshot"
-  alt="Slack Creation Modal"
-/>
+1. Back in GraphOS Studio, specify a name for this notification channel in the **Channel Name** field.
 
-1. Back in Studio, specify a name for this notification channel in the Channel Name field. This name must be unique among your graph's notification channels.
+   - This name must be unique among your graph's notification channels.
+   - This name does not have to match the name of the PagerDuty service, but it's recommended for simplicity.
 
-   This name does not have to match the name of the PagerDuty service, but it's recommended for simplicity.
-
-2. In the PagerDuty Integration Key field, paste the integration key you obtained in [Create a PagerDuty integration key](#1-create-a-pagerduty-integration-key).
+2. In the **PagerDuty Integration Key** field, paste the integration key you obtained in [Create a PagerDuty integration key](#1-create-a-pagerduty-integration-key).
 
 3. Click **Done**.
 
@@ -136,13 +124,6 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 Custom webhooks require you to set up an HTTPS endpoint that is accessible via the public internet. Webhook notifications are sent to this endpoint as `POST` requests. Notification details are provided as JSON in the request body, as described in [Webhook format](./schema-change-integration/#webhook-format).
 
-<img
-  src="../../img/integrations/webhook_creation.png"
-  className="screenshot"
-  alt="Webhook creation modal"
-  width="550"
-/>
-
-1. Specify a name for this notification channel in the Channel Name field. This name must be unique among of your graph's notification channels.
-2. In the Webhook URL field, provide the URL of your HTTP(S) endpoint.
+1. Specify a name for this notification channel in the **Channel Name** field. This name must be unique among of your graph's notification channels.
+2. In the **Webhook URL** field, provide the URL of your HTTP(S) endpoint.
 3. Click **Next** and complete any remaining steps in the dialog.
