Remove unnecessary schema proposal screenshots

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -137,7 +137,7 @@ If you run a check within a Git repository, `rover subgraph check` sends both th
 
 ### Rerunning checks
 
-You can rerun checks from GraphOS Studio:
+You can rerun checks from GraphOS Studio. Select the check and click **Rerun check**.
 
 <img
   className="screenshot"
