--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -20,12 +20,12 @@ To access the page, either:
     <img
       src="../../img/schema-proposals/proposals-left-nav.jpg"
       className="screenshot"
-      alt="Opening the Proposals page from the left nav in GraphOS Studio"
+      alt="Opening the Proposals page from the left navigation in GraphOS Studio"
     />
 
     <Note>
 
-    If you don't see **Proposals** in the left nav of a particular graph, it may be because the graph is a monograph. Schema proposals are designed for use with supergraphs and aren't available for monographs. Convert your monograph to a supergraph using the Rover CLI [`subgraph publish` command](/rover/commands/subgraphs/#subgraph-publish) with the [`--convert` flag](/rover/commands/subgraphs/#--convert).
+    If you don't see **Proposals** in the left navigation of a particular graph, it may be because the graph is a monograph. Schema proposals are designed for use with supergraphs and aren't available for monographs. Convert your monograph to a supergraph using the Rover CLI [`subgraph publish` command](/rover/commands/subgraphs/#subgraph-publish) with the [`--convert` flag](/rover/commands/subgraphs/#--convert).
 
     </Note>
 
@@ -40,12 +40,6 @@ To access the page, either:
 Follow the steps below to create a new proposal:
 
 1. Click the **Propose changes** button in the top right. A dialog entitled **Propose schema changes** appears.
-   <img
-     src="../../img/schema-proposals/proposal-dialog.jpg"
-     className="screenshot"
-     alt="Schema proposal creation dialog in GraphOS Studio"
-     width="400"
-   />
 2. Enter a descriptive **proposal title** that outlines the schema changes you plan to propose.
 
    <Note>
@@ -89,16 +83,9 @@ You can directly edit one or more subgraph schemas from a proposal's **Editor** 
 To start a new subgraph, click **+Add new** from the subgraph schema selector in the left nav.
 You can also delete existing subgraphs and rename newly created ones by clicking the **•••** menu to the right of a subgraph's name.
 
-<img
-  src="../../img/schema-proposals/subgraph-schema-selector.jpg"
-  className="screenshot"
-  alt="Subgraph selector in the schema proposals editor in GraphOS Studio"
-  width="200px"
-/>
-
 ### Lint changes
 
-To lint the schema changes you've made, click the Lint schema button in the top right of the editor.
+To lint the schema changes you've made, click the broom icon in the top right of the editor.
 
 <img
   src="../../img/schema-proposals/lint-changes.jpg"
@@ -129,13 +116,6 @@ Once you've made changes in the editor, rerun the linter by clicking the rerun b
 
 Once you've made changes, click the **Save Revision** button in the bottom left of the editor to save them.
 A dialog appears where you can optionally include a summary of your changes. This input accepts Markdown.
-
-<img
-  src="../../img/schema-proposals/save-revision.jpg"
-  className="screenshot"
-  alt="Save revision dialog in GraphOS Studio"
-  width="400px"
-/>
 
 The revision summary appears in the activity your proposal's overview tab. A proposal can include as many revisions as necessary.
 
