--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -4,7 +4,7 @@ subtitle: Review and provide feedback on proposed schema changes in GraphOS
 description: Review and provide feedback on GraphQL schema proposals in GraphOS Studio. Explore changes, add comments, and approve proposals.
 ---
 
-<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration"/>
+<EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#collaboration" />
 
 This article describes actions in the **Proposal review** stage of the [schema proposal workflow](./#proposal-workflow).
 
@@ -44,7 +44,7 @@ A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of t
 
 - The **Detailed view** shows a collapsible diff for each changed type.
 
-You can use the left nav to view changes for a particular subgraph, or see the changes in the context of the composed [supergraph schema](/federation/federated-types/overview/#supergraph-schema) or [resulting API schema](/federation/federated-types/overview/#api-schema).
+You can use the left navigation to view changes for a particular subgraph, or see the changes in the context of the composed [supergraph schema](/federation/federated-types/overview/#supergraph-schema) or [resulting API schema](/federation/federated-types/overview/#api-schema).
 
 #### Add comments
 
@@ -66,12 +66,6 @@ Click on the **•••** button next to a comment to edit or delete it.
 />
 
 Share a comment thread by clicking the link button to copy its URL.
-
-<img
-  src="../../img/schema-proposals/share-comment.jpg"
-  className="screenshot"
-  alt="Sharing a schema proposal comment in GraphOS Studio"
-/>
 
 The blue tab that appears next to a line shows the number of comments that line has.
 
