Remove more proposal screenshots

--- a/src/content/graphos/delivery/schema-proposals/review.mdx
+++ b/src/content/graphos/delivery/schema-proposals/review.mdx
@@ -32,13 +32,7 @@ Proposal creators and reviewers can review different aspects of a proposal from 
 
 ### Changes
 
-A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of the schema changes that make up a proposal:
-
-<img
-  src="../../img/schema-proposals/changes.jpg"
-  className="screenshot"
-  alt="The schema proposals changes tab in GraphOS Studio"
-/>
+A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of the schema changes that make up a proposal.
 
 - The **Summary** shows the number of objects, interfaces, and other types that changed in the proposal. Each type shows the number of lines added, deleted, and modified.
 
@@ -87,13 +81,6 @@ Once you've reviewed a proposal, click the **Add review** button on the top righ
 />
 
 A dialog appears where you can leave general commentary and select to approve the proposal.
-
-<img
-  src="../../img/schema-proposals/add-review-modal.jpg"
-  className="screenshot"
-  alt="Schema proposal review dialog in GraphOS Studio"
-  width="350"
-/>
 
 You can edit your review by clicking the pencil icon next to your name in the list of **Reviewers**.
 
